# teyca-sync

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  compose.yaml  idea.md  pyproject.toml  pyrightconfig.json  pyrightconfig.tests.json  tech-stack.md  teyca-api.json
.beads/: metadata.json
app/: config.py  logging_config.py  main.py  service_health.py  utils.py
app/api/: auth.py  webhook.py
app/clients/: listmonk.py  teyca.py
app/consumers/: common.py  create_user.py  delete_user.py  update_user.py
app/db/: models.py  session.py
app/mq/: publisher.py  queues.py
app/repositories/: bonus_accrual.py  email_repair_log.py  external_call_outbox.py  listmonk_user_archive.py  listmonk_users.py  merge_log.py  old_db.py  sync_state.py  users.py
app/schemas/: webhook.py
app/workers/: consent_sync_worker.py  email_repair_backfill.py  email_repair_worker.py  external_dispatcher_worker.py  legacy_snapshot_importer.py  listmonk_duplicate_subscriber_worker.py  listmonk_reconcile_worker.py  run_consent_sync.py  run_email_repair.py  run_email_repair_backfill.py  run_external_dispatcher.py  run_legacy_snapshot_import.py  run_listmonk_duplicate_subscriber.py  run_listmonk_reconcile.py  run_queue_consumers.py
docs/: current-runtime-flow.md  db-flow.md  external-dispatcher-rollout.md  idea.md  preparation.md  rabbitmq-volume-normalization.md  roadmap.md  tech-stack.md  teyca-api-mismatch-report.md  teyca-api.md
docs/components/: 01-webhook-entry.md  02-create-user-flow.md  03-update-user-flow.md  04-delete-user-flow.md  05-merge-flow.md  06-listmonk-sync.md
docs/grafana/: teyca-sync-overview-dashboard.json
migrations/: env.py
migrations/versions/: 001_initial_users_listmonk_merge_log.py  0e44aefbf8b3_add_consent_sync_and_accrual_tables.py  1620d633d874_add_referal_and_tags_to_users.py  34a51aad1253_add_listmonk_subscriber_unique_.py  693febcf3f05_add_listmonk_subscriber_archive.py  8d37d7408984_add_email_repair_log.py  9bac67d00026_add_external_call_outbox.py  e2c76c887215_normalize_emails_to_lowercase.py
tests/: conftest.py
tests/unit/: test_auth_common_publisher_teyca_and_runs.py  test_consent_sync_worker.py  test_create_user_consumer.py  test_delete_user_consumer.py  test_email_repair_backfill.py  (+14 more)
